Refine Java backend agents and add Codex skills
Make the Java coder, debugger, reviewers, and architect repository-driven and evidence-based while removing outdated runtime assumptions and repetitive prompt rules.

Add native Codex skill packages for each Java role, soften shared review heuristics, and restore valid plan-work frontmatter. All Codex skills pass the official validator.